# bevy_lostskies_transcriber

./: .gitignore  Cargo.toml  index.html
.github/workflows/: deploy_ghpages.yml  rust.yml
assets/: manifest.json
src/: main.rs
