[package]
name = "bevy_lostskies_transcriber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.0"
bevy_pancam = {version = "0.11.0", features = ["bevy_egui"]}
bevy_egui = "0.25"
wasm-bindgen = "0.2.91"


[profile.release]
opt-level = 2 # fast and small wasm